# SuFen_Agent

./: .env.example  .gitignore  AGENTS.md  DISCOVERY.md  MANIFEST.in  README.md  RUNBOOK.md  SOURCE_MAP.md  TEST_REPORT.md  UPSTREAM.md  model_tools.py  package-lock.json  package.json  pyproject.toml  sufen_constants.py  sufen_logging.py  toolsets.py  utils.py
agent/: auxiliary_client.py  chat_completion_helpers.py  codex_responses_adapter.py  context_compressor.py  context_engine.py  conversation_compression.py  conversation_loop.py  display.py  error_classifier.py  jiter_preload.py  memory_manager.py  memory_provider.py  model_metadata.py  process_bootstrap.py  prompt_builder.py  redact.py  retry_utils.py  runtime_cwd.py  secret_scope.py  skill_commands.py  skill_preprocessing.py  skill_utils.py  system_prompt.py  tool_executor.py  turn_context.py  web_search_provider.py
agent/transports/: chat_completions.py
docs/sufen/: initial-brief.md
plugins/: __init__.py
plugins/model-providers/deepseek/: __init__.py
plugins/web/tavily/: plugin.yaml  provider.py
providers/: README.md  __init__.py  base.py
scripts/: check_sufen_dialogue_live.py  check_sufen_dialogue_policy.py  sufen_rebrand_check.py  sufen_secret_scan.py
sufen/: __init__.py  auth.py  build.py  chat.py  cli.py  compat.py  config.py  fake_provider.py  memory.py  output.py  property_strategy.py  provider.py  server.py  session.py  task_package.py  terminal_ui.py  time.py
sufen/policy/: __init__.py  sufen_operating_policy.py  system.md
sufen/prompt/: __init__.py  identity.py
tests/sufen/: test_sufen_core.py
tools/: __init__.py  debug_helpers.py  registry.py  sufen_mystand_tools.py  thread_context.py  threat_patterns.py  tool_result_storage.py  url_safety.py  web_tools.py
