# PEP 639 SPDX license expression (`license = "MIT"` below) requires
# setuptools>=77. Keep this floor in lockstep with the `license` form in
# [project]; an older build backend rejects the string form.
[build-system]
requires = ["setuptools>=77.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "sufen-agent"
version = "0.1.0"
description = "SuFen-Agent — My Stand archive strategist for owners, clients, brokers, and scoped memory"
readme = "README.md"
# Upper bound is load-bearing, not cosmetic. uv resolves the project's
# Python from `requires-python`, and an inherited `UV_PYTHON` env var (or a
# fresh distro whose newest interpreter uv auto-picks) will otherwise select
# 3.14, where Rust-backed transitives (e.g. pydantic-core) have no cp314
# wheel yet and fall back to a maturin source build that fails. Capping at
# <3.14 makes uv refuse 3.14 with a clear error instead of attempting that
# build. Raise the ceiling once our Rust transitives ship cp314 wheels.
requires-python = ">=3.11,<3.14"
authors = [{ name = "My Stand" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  # Core — every direct dep is exact-pinned to ==X.Y.Z (no ranges).
  # Rationale: ranges allow PyPI to ship a fresh version of a transitive
  # at any time without a code review on our side. Exact pins mean the
  # only way a new package version reaches a user is via an intentional
  # update on our end (bump the pin in this file, regenerate uv.lock).
  # This was tightened after a compromised package release showed how range
  # pins can pull unsafe artifacts before an operator has time to review.
  #
  # When updating: bump the version below AND regenerate uv.lock with
  # `uv lock` so the transitive resolution stays consistent. Don't
  # introduce ranges back without a written justification.
  #
  # Scope rule: only packages used by the SuFen first-release runtime belong
  # here. Provider/platform experiments stay outside the published install
  # surface until a My Stand integration explicitly needs them.
  "openai==2.24.0",
  "certifi==2026.5.20",
  "python-dotenv==1.2.2",
  "fire==0.7.1",
  "httpx[socks]==0.28.1",
  "rich==14.3.3",
  "tenacity==9.1.4",
  "pyyaml==6.0.3",
  "ruamel.yaml==0.18.17",
  "requests==2.33.0",  # CVE-2026-25645
  "jinja2==3.1.6",
  # Bumped from 2.12.5 to 2.13.4 to pull in pydantic-core 2.46.4.
  # pydantic-core 2.41.5 (pulled by 2.12.5) segfaults when the OpenAI SDK's
  # Responses API resource is exercised from a non-main thread, which is the
  # codex_responses dispatch in agent/chat_completion_helpers.py:_call.
  "pydantic==2.13.4",
  # Interactive inherited-runtime helpers; the public command is `sufen`.
  "prompt_toolkit==3.0.52",
  # Retained parser dependency for future scheduler hooks; SuFen cron is off by default.
  "croniter==6.0.0",
  # Imported by inherited runtime helpers and pure-Python; keep pinned.
  "packaging==26.0",
  # Markdown rendering helper retained for API/HTML-safe summaries. External
  # message sending is not part of the default SuFen toolset.
  "Markdown==3.10.2",
  # Skills Hub (GitHub App JWT auth — optional, only needed for bot identity)
  "PyJWT[crypto]==2.13.0",  # PYSEC-2026-175/177/178/179
  # urllib3 2.7.0 fixes GHSA-mf9v-mfxr-j63j (decompression-bomb bypass)
  # and GHSA-qccp-gfcp-xxvc (header leak across origins).
  "urllib3>=2.7.0,<3",
  # cryptography is pulled in transitively by PyJWT[crypto]; pin it explicitly
  # so signed-token helpers cannot drift below the CVE-fixed floor.
  "cryptography==46.0.7",  # CVE-2026-39892, CVE-2026-34073
  # Windows has no IANA tzdata shipped with the OS, so Python's ``zoneinfo``
  # (PEP 615) raises ``ZoneInfoNotFoundError`` for every non-UTC timezone
  # out of the box.  ``tzdata`` ships the Olson database as a data package
  # Python resolves automatically.  No-op on Linux/macOS (which have
  # /usr/share/zoneinfo).  Credits: PR #13182 (@sprmn24).
  "tzdata==2025.3; sys_platform == 'win32'",
  # Cross-platform process / PID management.  `psutil` is the canonical
  # answer for "is this PID alive" and process-tree walking across Linux,
  # macOS and Windows.  It replaces POSIX-only idioms like `os.kill(pid, 0)`
  # (which is a silent killer on Windows — see CONTRIBUTING.md) and
  # `os.killpg` (which doesn't exist on Windows).
  "psutil==7.2.2",
  # Retained transport dependency used by inherited runtime modules. Browser
  # automation is not in the SuFen default toolset.
  "websockets==15.0.1",
  # .gitignore-aware file matching for delivery-boundary checks.
  "pathspec==1.1.1",
  # Required so uv-created project environments can run the documented
  # fresh-clone command: `uv run --python 3.11 python -m pip install -e ".[all]"`.
  "pip==26.0.1",
  "fastapi>=0.104.0,<1",
  "uvicorn[standard]>=0.24.0,<1",
  # FastAPI UploadFile/Form support for future My Stand API payloads.
  "python-multipart>=0.0.9,<1",
  "ptyprocess>=0.7.0,<1; sys_platform != 'win32'",
  "pywinpty>=2.0.0,<3; sys_platform == 'win32'",
  # Retained image-normalization helper used by inherited runtime modules.
  "Pillow==12.2.0",
  # Windows log rotation for inherited runtime logging. ``concurrent-log-handler``
  # wraps rename in a cross-process file lock so only one process rotates at a time.
  # Hence the ``sys_platform == 'win32'`` marker: the dep (and its portalocker
  # / pywin32 tree) ships only where it's actually used.
  "concurrent-log-handler==0.9.29; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["debugpy==1.8.20", "pytest==9.0.2", "pytest-asyncio==1.3.0", "starlette==1.0.1", "ty==0.0.21", "ruff==0.15.10", "setuptools==81.0.0"]
# SuFen HTTP API. Not in core to keep the default install lean.
# starlette==1.0.1 pinned for CVE-2026-48710 (BadHost) — fastapi pulls Starlette
# transitively and pre-1.0.1 is the vulnerable range.
web = ["fastapi==0.133.1", "uvicorn[standard]==0.41.0", "starlette==1.0.1", "python-multipart==0.0.27"]
all = [
  "sufen-agent[web]",
]

[project.scripts]
sufen = "sufen.cli:main"

[tool.setuptools]
include-package-data = false
py-modules = ["model_tools", "toolsets", "sufen_constants", "sufen_logging", "utils"]

[tool.setuptools.cmdclass]
build_py = "sufen.build.SuFenBuildPy"

[tool.setuptools.package-data]
sufen = ["policy/*.md"]
plugins = [
  "web/tavily/plugin.yaml",
  "model-providers/deepseek/__init__.py",
  "model-providers/deepseek/plugin.yaml",
]

[tool.setuptools.packages.find]
include = [
  "sufen", "sufen.*",
  "agent", "agent.*",
  "tools", "tools.*",
  "plugins",
  "plugins.web", "plugins.web.tavily",
  "providers", "providers.*",
]
exclude = ["plugins.browser*", "plugins.context_engine*", "plugins.cron_providers*", "plugins.dashboard_auth*", "plugins.google_meet*", "plugins.image_gen*", "plugins.kanban*", "plugins.memory*", "plugins.observability*", "plugins.platforms*", "plugins.security_guidance*", "plugins.spotify*", "plugins.teams_pipeline*", "plugins.video_gen*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external services (API keys, Modal, etc.)",
    "real_concurrent_gate: opt out of the autouse stub that disables inherited concurrent-instance detection",
]
# integration tests take way too long to run in the normal CI environments
addopts = "-m 'not integration'"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
unknown-argument = "warn"
redundant-cast = "ignore"

[tool.ruff]
preview = true  # required for PLW1514 (unspecified-encoding) — preview rule

[tool.ruff.lint]
# All other lints are intentionally disabled (see comment history on this
# file) while we wrangle typechecks — but PLW1514 is too load-bearing to
# keep off.  Bare open()/read_text()/write_text() in text mode defaults to
# the system locale encoding on Windows (cp1252 on US-locale installs),
# which silently corrupts any non-ASCII file content.  We had three
# separate Windows sandbox regressions in one debug session before
# adding the explicit encoding.  This rule keeps new code honest.
select = ["PLW1514"]

[tool.ruff.lint.per-file-ignores]
# Tests can intentionally exercise locale-encoding edge cases.
"tests/**" = ["PLW1514"]
# Skills and plugins are partially user-authored — their own conventions.
"skills/**" = ["PLW1514"]
"optional-skills/**" = ["PLW1514"]
"plugins/**" = ["PLW1514"]
